UI fixes for elastic profiles page * Change in key value pair padding for better alignment. * Add custom collapsible element to show Cluster Profile details as the styles are very specific. * Show plugin name instead of plugin id on cluster profile header panel. * Truncate cluster profile ID. * Header for elastic agent profiles. * Change `New Elastic Agent Profile` button to `Elastic Agent Profile`. * Display generic error message while saving a cluster profile. * Show warning message on `Edit Cluster Profile Modal` for plugins not supporting Cluster Profiles.

--- a/server/webapp/WEB-INF/rails/webpack/views/components/buttons/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/components/buttons/index.scss
@@ -72,7 +72,11 @@
 }
 
 .icon-add {
-  border: 10px solid $secondary-bg;
+  @include icon-before($type: $fa-var-plus);
+
+  &:before {
+    margin: 5px 10px 5px -5px;
+  }
 }
 
 .icon-doc {
